<resources>
    <string name="app_name">AutoSudoku</string>
    <string name="title_activity_main_field">Sudoku</string>
    <string name="start">Start</string>
    <string name="easy_level">Elementary</string>
    <string name="medium_level">Easy</string>
    <string name="hard_level">Medium</string>
    <string name="very_hard_level">Hard</string>

    <string name="statistic">Statistic</string>
    <string name="continue_button">Continue</string>
    <string name="reset">Reset</string>
    <string name="reset_title">Reset statistic</string>
    <string name="reset_message">Are you sure that you want to reset statistic?</string>
    <string name="hint_message">Do you need a hint?</string>
    <string name="no_hint_message">Sudoku was solved!</string>
    <string name="reset_confirm">Yes</string>
    <string name="reset_decline">No</string>
    <string-array name="statistic_fields">
        <item>Total sold</item>
        <item>Total generate</item>
        <item>Win percent</item>
        <item>Total time spend</item>
        <item>Best time</item>
        <item>Total hints get</item>
        <item>Hints on current sudoku get</item>
    </string-array>
    <string-array name="victory_messages">
        <item>You win!</item>
        <item>You solve!</item>
    </string-array>
    <string-array name="victory_congratulations">
        <item>Congratulations!</item>
        <item>Victory!</item>
        <item>Nice job!</item>
        <item>Amazing!</item>
        <item>Grate!</item>
    </string-array>
    <string-array name="assept_buttons">
        <item>Thank you</item>
        <item>OK</item>
        <item>Continue</item>
    </string-array>
    <string-array name="record_victory_congratulations">
        <item>New record!</item>
        <item>New best time!</item>
    </string-array>
    >
</resources>
