<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.olga_kondratenko.autosudoku_v2.view.MenuActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameButton">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <RadioButton
                android:id="@+id/easy_level_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="chooseLevel"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/easy_level"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/medium_level_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="chooseLevel"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/medium_level"
                android:textColor="@color/textColor" />
        </TableRow>

        <TableRow
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <RadioButton
                android:id="@+id/hard_level_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="chooseLevel"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/hard_level"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/very_hard_level_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="chooseLevel"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/very_hard_level"
                android:textColor="@color/textColor" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/statistic_button"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="openStatistic"
        android:text="@string/statistic"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/start"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="logo"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
